<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_marginTop="60dp"
        android:layout_width="160dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/walmart_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/str_create"
        android:textColor="@color/dark_gray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/box_bakcground"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            style="@style/label"
            android:textStyle="bold"
            android:text="@string/str_required" />

        <TextView
            style="@style/label"
            android:text="@string/str_firstname"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/firstname"
            android:inputType="textPersonName"
            style="@style/input"/>

        <TextView
            style="@style/label"
            android:layout_marginTop="16dp"
            android:text="@string/str_lastname" />

        <EditText
            android:id="@+id/lastname"
            android:inputType="textPersonName"
            style="@style/input" />

        <TextView
            style="@style/label"
            android:layout_marginTop="16dp"
            android:text="@string/str_email" />

        <EditText
            android:id="@+id/email"
            style="@style/input"
            android:inputType="textEmailAddress"/>

        <TextView
            style="@style/label"
            android:layout_marginTop="16dp"
            android:text="@string/str_password" />

        <EditText
            android:id="@+id/password"
            style="@style/input"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/blue"
            android:text="@string/str_register"
            android:textAllCaps="false"
            android:minHeight="56dp"
            android:textColor="@color/white"
            android:theme="@style/Widget.AppCompat.Button.Colored" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>